# MaxflowProject

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  assign.csv  graph.dot  header.html  main.cpp  main.d  maxflow_tests  run.sh
algorithms/: EdmondKarp.cpp  EdmondKarp.d  EdmondKarp.h  FordFulkerson.cpp  FordFulkerson.h
data_structures/: Graph.h  GraphBuilder.cpp  GraphBuilder.d  GraphBuilder.h  createGraphs.cpp  createGraphs.h
docs/html/: AssignmentLogic_8cpp.html  AssignmentLogic_8cpp.js  AssignmentLogic_8cpp__incl.map  AssignmentLogic_8cpp__incl.md5  AssignmentLogic_8cpp_source.html  AssignmentLogic_8h.html  AssignmentLogic_8h.js  AssignmentLogic_8h__dep__incl.map  AssignmentLogic_8h__dep__incl.md5  AssignmentLogic_8h__incl.map  AssignmentLogic_8h__incl.md5  AssignmentLogic_8h_source.html  ConferenceApp_8cpp.html  ConferenceApp_8cpp__incl.map  ConferenceApp_8cpp__incl.md5  ConferenceApp_8cpp_source.html  ConferenceApp_8h.html  ConferenceApp_8h.js  ConferenceApp_8h__dep__incl.map  ConferenceApp_8h__dep__incl.md5  ConferenceApp_8h__incl.map  ConferenceApp_8h__incl.md5  ConferenceApp_8h_source.html  EdmondKarp_8cpp.html  EdmondKarp_8cpp.js  EdmondKarp_8cpp__incl.map  EdmondKarp_8cpp__incl.md5  EdmondKarp_8cpp_source.html  EdmondKarp_8h.html  EdmondKarp_8h.js  EdmondKarp_8h__dep__incl.map  (+324 more)
dox/: annotated_architecture.dot  example_graph.dot  extra_documentation.dox  t21_example.dot  t22_example.dot  t23_baseline.dot  t23_remove_1_2.dot  t23_remove_1_3.dot  t24_example.dot  test_diff_ours.dot
inputs/: mini_input.csv
io/: FileParser.cpp  FileParser.d  FileParser.h
models/: Parameters.h  Reviewer.cpp  Reviewer.d  Reviewer.h  Submission.cpp  Submission.d
services/: AssignmentLogic.cpp  AssignmentLogic.d  AssignmentLogic.h
tests/: README.md  maxflow_tests.cpp  maxflow_tests.d  run_integration_tests.sh  test_input.csv
ui/: ConferenceApp.cpp  ConferenceApp.d  ConferenceApp.h
utils/: AssignmentLogic.cpp  AssignmentLogic.h  EdmondKarp.cpp  EdmondKarp.h  FileParser.cpp  FileParser.h  Parameters.cpp  Parameters.h  Reviewer.cpp  Reviewer.h  Submission.cpp  Submission.h
(+90 files in other folders)
